<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <me.aap.utils.ui.menu.OverlayMenuItemView
        android:id="@+id/mark_watched"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:text="@string/mark_watched" />

    <me.aap.utils.ui.menu.OverlayMenuItemView
        android:id="@+id/mark_unwatched"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:text="@string/mark_unwatched" />

    <me.aap.utils.ui.menu.OverlayMenuItemView
        android:id="@+id/video_scaling"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:submenu="@layout/dynamic"
        app:text="@string/video_scaling" />

    <me.aap.utils.ui.menu.OverlayMenuItemView
        android:id="@+id/audio_delay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:submenu="@layout/dynamic"
        app:text="@string/audio_delay" />

    <me.aap.utils.ui.menu.OverlayMenuItemView
        android:id="@+id/subtitle_delay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:submenu="@layout/dynamic"
        app:text="@string/subtitle_delay" />

    <me.aap.utils.ui.menu.OverlayMenuItemView
        android:id="@+id/select_audio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:submenu="@layout/dynamic"
        app:text="@string/select_audio_stream" />

    <me.aap.utils.ui.menu.OverlayMenuItemView
        android:id="@+id/select_subtitles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:submenu="@layout/dynamic"
        app:text="@string/select_subtitles" />

    <me.aap.utils.ui.menu.OverlayMenuItemView
        android:id="@+id/audio_prefs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:submenu="@layout/dynamic"
        app:text="@string/audio" />

    <me.aap.utils.ui.menu.OverlayMenuItemView
        android:id="@+id/subtitle_prefs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:submenu="@layout/dynamic"
        app:text="@string/subtitles" />

</merge>