<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <me.aap.utils.ui.menu.OverlayMenuItemView
        android:id="@+id/favorites_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:icon="@drawable/favorite"
        app:text="@string/favorites_add" />

    <me.aap.utils.ui.menu.OverlayMenuItemView
        android:id="@+id/favorites_remove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:icon="@drawable/favorite_filled"
        app:text="@string/favorites_remove" />

    <me.aap.utils.ui.menu.OverlayMenuItemView
        android:id="@+id/playlist_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:icon="@drawable/playlist_add"
        app:text="@string/playlist_add" />

    <me.aap.utils.ui.menu.OverlayMenuItemView
        android:id="@+id/playlist_remove"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:icon="@drawable/playlist_remove"
        app:text="@string/playlist_remove" />

    <me.aap.utils.ui.menu.OverlayMenuItemView
        android:id="@+id/repeat_enable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:icon="@drawable/repeat"
        app:text="@string/repeat" />

    <me.aap.utils.ui.menu.OverlayMenuItemView
        android:id="@+id/repeat_disable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:icon="@drawable/repeat_filled"
        app:text="@string/repeat_disable" />

    <me.aap.utils.ui.menu.OverlayMenuItemView
        android:id="@+id/bookmarks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:icon="@drawable/bookmark_filled"
        app:submenu="@layout/dynamic"
        app:text="@string/bookmarks" />

    <me.aap.utils.ui.menu.OverlayMenuItemView
        android:id="@+id/create_bookmark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:icon="@drawable/bookmark"
        app:text="@string/create_bookmark" />

    <me.aap.utils.ui.menu.OverlayMenuItemView
        android:id="@+id/preferred_media_engine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:icon="@drawable/media_engine"
        app:submenu="@layout/dynamic"
        app:text="@string/preferred_media_engine" />

    <me.aap.utils.ui.menu.OverlayMenuItemView
        android:id="@+id/video_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:icon="@drawable/video"
        app:submenu="@layout/video_submenu"
        app:text="@string/video" />

</merge>