<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <me.aap.fermata.ui.menu.AppMenuItemView
        android:id="@+id/tool_sub_track_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:checkable="true"
        app:text="@string/track_name" />

    <me.aap.fermata.ui.menu.AppMenuItemView
        android:id="@+id/tool_sub_file_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:checkable="true"
        app:text="@string/file_name" />

    <me.aap.fermata.ui.menu.AppMenuItemView
        android:id="@+id/tool_sub_album"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:checkable="true"
        app:text="@string/album" />

    <me.aap.fermata.ui.menu.AppMenuItemView
        android:id="@+id/tool_sub_artist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:checkable="true"
        app:text="@string/artist" />

    <me.aap.fermata.ui.menu.AppMenuItemView
        android:id="@+id/tool_sub_dur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:checkable="true"
        app:text="@string/duration" />

</merge>