<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include layout="@layout/media_item_menu" />

    <me.aap.fermata.ui.menu.AppMenuItemView
        android:id="@+id/shuffle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:icon="@drawable/shuffle"
        app:text="@string/shuffle" />

    <me.aap.fermata.ui.menu.AppMenuItemView
        android:id="@+id/shuffle_disable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:icon="@drawable/shuffle_filled"
        app:text="@string/shuffle_disable" />

    <me.aap.fermata.ui.menu.AppMenuItemView
        android:id="@+id/audio_effects"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/equalizer"
        app:text="@string/audio_effects" />

    <me.aap.fermata.ui.menu.AppMenuItemView
        android:id="@+id/speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/speed"
        app:text="@string/speed" />

    <me.aap.fermata.ui.menu.AppMenuItemView
        android:id="@+id/select_audio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:icon="@drawable/audio_stream"
        app:text="@string/select_audio" />

    <me.aap.fermata.ui.menu.AppMenuItemView
        android:id="@+id/select_subtitles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:icon="@drawable/subtitles"
        app:text="@string/select_subtitles" />
</merge>