<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <me.aap.utils.ui.menu.OverlayMenuItemView
        android:id="@+id/repeat_track"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:text="@string/current_track" />

    <me.aap.utils.ui.menu.OverlayMenuItemView
        android:id="@+id/repeat_folder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:text="@string/current_folder" />

    <me.aap.utils.ui.menu.OverlayMenuItemView
        android:id="@+id/repeat_disable_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:text="@string/repeat_disable" />

</merge>