<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <me.aap.fermata.ui.menu.AppMenuItemView
        android:id="@+id/tool_seq_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:checkable="true"
        app:text="@string/seq_num" />

    <me.aap.fermata.ui.menu.AppMenuItemView
        android:id="@+id/tool_track_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:checkable="true"
        app:text="@string/track_name" />

    <me.aap.fermata.ui.menu.AppMenuItemView
        android:id="@+id/tool_file_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:checkable="true"
        app:text="@string/file_name" />

</merge>